Dockerfile modified to accomodate the base python image

--- a/SampleFlask/Dockerfile
+++ b/SampleFlask/Dockerfile
@@ -1,15 +1,16 @@
-FROM gliderlabs/alpine:3.3
+FROM python:3.5.2-slim
+
+RUN apt-get update && apt-get install -y gcc unixodbc-dev
 
 RUN mkdir -p /opt/microservice
 
 ADD . /opt/microservice
 
-RUN apk --update add python py-pip openssl ca-certificates
+WORKDIR /opt/microservice
 
 RUN pip install -r requirements.txt
 
 EXPOSE 5000
 
-WORKDIR /opt/microservice
 
-CMD [ "python app.py" ]
+CMD [ "python", "app.py" ]
